# EFZRichPresence

./: .gitignore  CMakeLists.txt  CMakePresets.json  NETPLAY_STATE_EXPORT.md  README.md  netplay_state_export.h
include/: config.h  efz_netplay_state.h  logger.h  version.h
include/discord/: discord_client.h
include/netplay/bridge/: netplay_state_export.h
include/state/: game_state_provider.h
src/: config.cpp  dllmain.cpp  logger.cpp
src/discord/: discord_client_stub.cpp
src/state/: game_state_provider_stub.cpp
